# https-web-server-example

./: .gitignore  Cargo.toml  Dockerfile.build  LICENSE  README.md  build.sh  generate_certs.bat  generate_certs.sh  package-lock.json  package.bat  package.json  setup.bat  start.bat  start.sh  unity.bat  unity.sh
public/: 404.html  index.html  test.html
src/: main.rs  server.ts  unity.ts
