[package]
name = "https-web-server-example"
version = "0.1.2"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_21"] }
actix-files = "0.6"
rustls = "=0.21.7" 
rustls-pemfile = "=1.0.3"
tokio = { version = "1", features = ["full"] }
notify = "8.0.0"
futures-util = "0.3"
brotli = "7.0.0"
clap = { version = "4.4", features = ["derive"] }
mime_guess = "2.0"
actix-web-actors = "4.2"
actix = "0.13"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "errhandlingapi",
    "consoleapi",
    "processenv",
    "minwindef",
    "handleapi",
    "winbase"
] }
